nav position, colors, quote styling

--- a/src/scss/partials/_global.scss
+++ b/src/scss/partials/_global.scss
@@ -1,5 +1,63 @@
-$primaryColor: #b4bec3;
+$primaryColor: #8fecef;
+$secondaryColor: #ffff;
 
-body {
-	background: $primaryColor;
+body{
+    // background-color: aqua;
+    background-image: url(http://localhost:8888/vanessa-naja/wp-content/uploads/2019/07/tree-sunset-1.jpg);
+    background-size: cover;
+    .site-branding  {
+        margin-top: 3em;
+        text-align: center;
+    }
+    .site-title {
+		margin-bottom: 0;
+    a {
+		background-color: rgba(255, 255, 255, 0.25);
+		margin-right: 25%;
+		font-size: 10rem;
+        text-decoration: none;
+        color: $primaryColor;
+		text-shadow: -1px 2px 2px rgba(230, 221, 219, 0.6);
+		padding: 0 0.5em;
+        }
+    }
+    
+    .site-description {
+        font-size: 2.7em;
+        color: $secondaryColor;
+        font-style: italic;
+        margin-top: 0;
+		font-weight: 300;
+		margin-left: 23%;
+    }
 }
+nav#site-navigation.main-navigation {
+	// max-width: 100%;
+	top: 2em;
+	// left: 70em;
+	bottom: auto;
+	position: fixed;
+	right: 0;
+	max-width: 35%;
+	a {
+		padding: 0 2rem;
+		font-size: 1.5rem;
+		color: $secondaryColor;
+	}
+	a:hover {
+		color: $primaryColor;
+	}
+}
+
+div.entry-content p {
+	font-size: 1.3rem;
+    color: $primaryColor;
+    text-align: center;
+	margin: 5em;
+	font-weight: 300;
+}
+
+#secondary {
+    display: none;
+}
+
