style individual projects template

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,2 +1,4 @@
 @import 'partials/global.scss';
 @import 'partials/page.scss';
+@import 'partials/projects.scss';
+@import 'partials/individual-project';
