--- a/src/scss/partials/_global.scss
+++ b/src/scss/partials/_global.scss
@@ -9,26 +9,37 @@ body{
 	background-position: center center;
 	.site-branding {
 		margin-top: 5em;
+		a {
+			background-color: rgba(255, 255, 255, 0.2);
+			font-size: 5rem;
+			text-decoration: none;
+			color: $primaryColor;
+			text-shadow: -1px 2px 2px rgba(230, 221, 219, 0.6);
+			cursor: default;
+			&:hover {
+				color: $primaryColor;
+			}
+			@media (min-width: 400px){
+				padding: 0 0.5em;
+				}
+			}
 	}
 	.site-title {
 		// margin-bottom: 0;
 		margin-bottom: 2em;
 		// margin-top: 9em;	
 		margin-top: 11em;
-    a {
-		background-color: rgba(255, 255, 255, 0.2);
-		// margin-right: 25%;
-		// font-size: 10rem;
-		font-size: 5rem;
-        text-decoration: none;
-        color: $primaryColor;
-		text-shadow: -1px 2px 2px rgba(230, 221, 219, 0.6);
-		cursor: default;
-		// padding: 0 0.5em;
-		@media (min-width: 400px){
-			padding: 0 0.5em;
-			}
-		}		
+    // a {
+	// 	background-color: rgba(255, 255, 255, 0.2);
+	// 	font-size: 5rem;
+    //     text-decoration: none;
+    //     color: $primaryColor;
+	// 	text-shadow: -1px 2px 2px rgba(230, 221, 219, 0.6);
+	// 	cursor: default;
+	// 	@media (min-width: 400px){
+	// 		padding: 0 0.5em;
+	// 		}
+	// 	}		
     }
     .site-description {
 		// font-size: 2.7em;
@@ -45,9 +56,9 @@ body{
 		&:hover {
 			color: $secondaryColor;
 		}
-		&:visited {
-			color: royalblue;
-		}
+		// &:visited {
+		// 	color: royalblue;
+		// }
 	}
 	.menu-toggle	{
 		background-color: $primaryColor;
