--- a/src/scss/partials/_projects.scss
+++ b/src/scss/partials/_projects.scss
@@ -15,13 +15,22 @@ $tertiaryColor: #f5deb3;
 }
 .page-id-92 {
     background-image: none;
-    background-color:#4F1B3F;
+    background-color: #531B40;
+    @media (min-width: 1340px) {
+        background-clip: #491B38;
+    }
+    @media (min-width: 1400px){
+        background-color:#3E1531;
+        }
     }
     .entry-content {
-        margin-top: -21em;
+        margin-top: -11em;
     }
     .project-list-item {
-        margin: 1em 7em;;
+        margin: 1em 3em 4em;
+    @media (min-width: 3800px){
+        margin: 1em 7em;
+        }
     }
     h2 {
         font-family: Montserrat;
@@ -56,4 +65,4 @@ $tertiaryColor: #f5deb3;
     div.entry-content a:hover {
         color: $secondaryColor;
     }
-}
+
