--- a/src/scss/partials/_projects.scss
+++ b/src/scss/partials/_projects.scss
@@ -32,7 +32,7 @@ $tertiaryColor: #f5deb3;
         margin: 1em 7em;
         }
     }
-    h2 {
+    .project-list-item h2 {
         font-family: Montserrat;
         font-weight: 400;
         font-size: 2rem;
