style individual project img

--- a/src/scss/partials/_individual-project.scss
+++ b/src/scss/partials/_individual-project.scss
@@ -26,6 +26,7 @@ $purple: #551D41;
 .project-image {
     max-width: 100%;
     text-align: center;
+    margin-top: 4.25em;
 }
 .project-title {
     text-align: center;
