test procejt-list-test css with projects page

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,4 +1,7 @@
 @import 'partials/global.scss';
 @import 'partials/page.scss';
-@import 'partials/projects.scss';
+// @import 'partials/projects.scss';
+@import 'partials/project-list-test';
 @import 'partials/individual-project';
+@import 'partials/projects-new';
+@import 'partials/individual-projects-new';
