--- a/src/scss/partials/_project-list-test.scss
+++ b/src/scss/partials/_project-list-test.scss
@@ -23,6 +23,10 @@ $tertiaryColor: #f5deb3;
         font-weight: 400;
         font-size: 2rem;
         display: inline-block;
+        margin-bottom: 2em;
+        @media (min-width: 1253px){
+            margin-bottom: 0;
+        }
         }
       a {
           text-decoration: none;
@@ -32,6 +36,10 @@ $tertiaryColor: #f5deb3;
         margin: 0 1em 1em 1em;
         border-bottom: 1px solid black;
         box-shadow: 4px 6px 7px -2px rgba(0,0,0,0.75);
+        text-align: center;
+        @media (min-width: 1253px){
+            text-align: left;
+        }
         }
     }
 .project-container {
@@ -39,23 +47,31 @@ $tertiaryColor: #f5deb3;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    // margin: 0 1em 1em 1em;
     @media (min-width: 1253px){
         flex-direction: row-reverse;
         margin: 0 1em 1em 1em;
     }
-    p {
-        margin-top: 1em;
+    .short-description p {
+        margin: 3em;
+        @media (min-width: 1253px){
+            margin-top: 1em;
+        }
     }
     img {
         width: auto;
         height: auto; 
-        // margin: 0 1em 0 1em; 
+        margin: 2em;
     }
 }
 .project-list-item:nth-of-type(even) .project-container {
-    // margin-right: 1em;
     @media (min-width: 1253px){
         flex-direction: row;
+        margin: 0 1em 2em 1em;
+    }
+}
+.project-list-item:nth-of-type(odd) .project-container {
+    @media (min-width: 1253px){
+        margin-right: 3em;
+        margin-bottom: 2em;
     }
 }
