--- a/src/scss/partials/_global.scss
+++ b/src/scss/partials/_global.scss
@@ -4,7 +4,8 @@ $tertiaryColor: #f5deb3;
 $purple: #551D41;
 
 body{
-    background-image: url(http://localhost:8888/vanessa-naja/wp-content/uploads/2019/07/tree-sunset-1.jpg);
+	// background-image: url(http://localhost:8888/vanessa-naja/wp-content/uploads/2019/07/tree-sunset-1.jpg);
+	background-image: url(http://localhost:8888/vanessa-naja/wp-content/uploads/2019/08/tree-sunset-gradient.jpg);
 	background-position: center center;
 	background-size: cover;
 	.site-branding {
@@ -44,6 +45,13 @@ body{
 	}
 	.menu-toggle	{
 		background-color: $primaryColor;
+	}
+		#primary-menu.menu.nav-menu[aria-expanded="true"] a {
+		color: #000;
+		font-size: 1rem;	
+		background-color: rgba(255, 255, 255, 0.4);
+		padding: 0.5em 0.5em;
+		border-bottom: 2px solid rgba(0,0,0,0.3);
 	}
 	@media (min-width: 700px){
 		.site-title a {
@@ -91,6 +99,8 @@ nav#site-navigation.main-navigation {
 		padding: 0.5em 3em;
 		box-shadow: -1px 1px 1px rgba(230, 221, 219, 0.6);
 		font-size: 0.85rem;
+		font-style: italic;
+		font-weight: 500;
 	}
 	button.menu-toggle:hover {
 		background-color: $secondaryColor;
@@ -115,7 +125,8 @@ div.entry-content p {
 	font-size: 1.3rem;
 	color: $tertiaryColor;
     text-align: center;
-	margin-top: 15em;
+	// margin-top: 15em;
+	margin-top: 4em;
 	font-weight: 300;
 	@media (min-width: 1253px){
 		margin: 5em;
