update scss file names

--- a/src/scss/partials/_projects.scss
+++ b/src/scss/partials/_projects.scss
@@ -12,61 +12,80 @@ $tertiaryColor: #f5deb3;
 .page-id-92 {
     background-image: none;
     background-color: #531B40;
-    // @media (min-width: 1340px) {
-    //     background-clip: #491B38;
-    // }
     @media (min-width: 1400px){
         background-color:#3E1531;
         }
     }
-    .entry-content {
-        margin-top: -11em;
-    }
-    .project-list-item {
-        margin: 1em 3em 4em;
-        //from prejcts-new
-        // margin: 0 1em 1em 1em;
-        // border-bottom: 1px solid black;
-        // box-shadow: 4px 6px 7px -2px rgba(0,0,0,0.75);
-        h2 {
-            font-family: Montserrat;
-            font-weight: 400;
-            font-size: 2rem;
-            display: inline-block; 
+.entry-content {
+    margin-top: -11em;
+    h2 {
+        font-family: Montserrat;
+        font-weight: 400;
+        font-size: 2rem;
+        display: inline-block;
+        margin-bottom: 2em;
+        @media (min-width: 1253px){
+            margin-bottom: 0;
         }
-    @media (min-width: 380px){
-        margin: 1em 7em;
+        }
+      a {
+          text-decoration: none;
+          color: $primaryColor;
+          &:hover {
+              color: $secondaryColor;
+          }
+      }  
+      .project-list-item {
+        margin: 0 1em 1em 1em;
+        border-bottom: 1px solid black;
+        box-shadow: 4px 6px 7px -2px rgba(0,0,0,0.75);
+        text-align: center;
+        @media (min-width: 1253px){
+            text-align: left;
+            margin-left: 3em;
+            }
+        }
+        .project-list-item:nth-of-type(even){
+            @media (min-width: 1253px){
+                text-align: right;
+            }
+        } 
+        .project-list-item:nth-of-type(even) h2{
+            @media (min-width: 1253px){
+                margin-right: 7em;
+            }
+        } 
+    }
+.project-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    @media (min-width: 1253px){
+        flex-direction: row-reverse;
+        margin: 0 1em 1em 1em;
+    }
+    .short-description p {
+        margin: 3em;
+        @media (min-width: 1253px){
+            margin-top: 1em;
         }
     }
-    .project-list-item:nth-of-type(odd) img {
-        margin-left: 1em;
-        @media (min-width: 800px){
-            float: right;
-        }
+    img {
+        width: auto;
+        height: auto; 
+        margin: 2em;
     }
-    .project-list-item:nth-of-type(odd) p {
-        text-align: left;
-        margin-top: 1em;
-        margin-left: 0em;
+}
+.project-list-item:nth-of-type(even) .project-container {
+    @media (min-width: 1253px){
+        flex-direction: row;
+        margin: 0 1em 2em 1em;
     }
-    .project-list-item:nth-of-type(even) img {
-        margin-right: 1em;
-        @media (min-width: 800px){
-            float: left;
-        }
+}
+.project-list-item:nth-of-type(odd) .project-container {
+    @media (min-width: 1253px){
+        margin-right: 3em;
+        margin-bottom: 2em;
     }
-    .project-list-item:nth-of-type(even) p {
-        text-align: left;
-        margin-top: 1em;
-    }
-    div.entry-content a {
-        color: $primaryColor;
-        text-decoration: none;
-    }
-    // div.entry-content:nth-of-type(odd) {
-    //     margin-left: 1em;
-    // }
-    div.entry-content a:hover {
-        color: $secondaryColor;
-    }
-
+}
