--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,7 +1,6 @@
 @import 'partials/global.scss';
 @import 'partials/page.scss';
-// @import 'partials/projects.scss';
-@import 'partials/project-list-test';
 @import 'partials/individual-project';
 @import 'partials/projects-new';
 @import 'partials/individual-projects-new';
+@import 'partials/projects';
