--- a/src/scss/partials/_global.scss
+++ b/src/scss/partials/_global.scss
@@ -8,6 +8,7 @@ body{
 	background-image: url(http://localhost:8888/vanessa-naja/wp-content/uploads/2019/08/tree-sunset-gradient.jpg);
 	background-position: center center;
 	background-size: cover;
+	background-repeat: no-repeat;
 	.site-branding {
 		margin-top: 5em;
 		a {
@@ -45,6 +46,9 @@ body{
 	}
 	.menu-toggle	{
 		background-color: $primaryColor;
+		&:hover {
+			background-color: red;
+		}
 	}
 		#primary-menu.menu.nav-menu[aria-expanded="true"] a {
 		color: #000;
@@ -52,6 +56,9 @@ body{
 		background-color: rgba(255, 255, 255, 0.4);
 		padding: 0.5em 0.5em;
 		border-bottom: 2px solid rgba(0,0,0,0.3);
+		&:hover {
+			background-color: rgba(255, 255, 255, 0.7);
+		}
 	}
 	@media (min-width: 700px){
 		.site-title a {
@@ -96,7 +103,7 @@ nav#site-navigation.main-navigation {
 	}
 	button.menu-toggle	{
 		margin-top: 2em;
-		padding: 0.5em 3em;
+		padding: 0.7em 3em;
 		box-shadow: -1px 1px 1px rgba(230, 221, 219, 0.6);
 		font-size: 0.85rem;
 		font-style: italic;
@@ -125,8 +132,7 @@ div.entry-content p {
 	font-size: 1.3rem;
 	color: $tertiaryColor;
     text-align: center;
-	// margin-top: 15em;
-	margin-top: 4em;
+	margin: 4em 1em 1em 1em;
 	font-weight: 300;
 	@media (min-width: 1253px){
 		margin: 5em;
