--- a/src/scss/partials/_page.scss
+++ b/src/scss/partials/_page.scss
@@ -4,7 +4,6 @@ $tertiaryColor: #f5deb3;
 $purple: #551D41;
 
 .page-id-24 #masthead {
-    // background-image: url(http://localhost:8888/vanessa-naja/wp-content/uploads/2019/07/tree-sunset-1.jpg);
     background-image: url(http://localhost:8888/vanessa-naja/wp-content/uploads/2019/08/tree-sunset-gradient.jpg);
     // background-image: url(http://localhost:8888/vanessa-naja/wp-content/uploads/2019/08/tree-sunset-shorter-gradient.jpg);
     background-size: cover;
@@ -46,6 +45,11 @@ footer {
     }
     .social-icons img {
         margin: 0 1em;
+        padding: 2px;
+        border-radius: 50%;
+        background: $tertiaryColor;
     }
-    
+    img:hover {
+        background: $primaryColor;
+    }
 }
