additional media queries for individual projects

--- a/src/scss/partials/_global.scss
+++ b/src/scss/partials/_global.scss
@@ -139,7 +139,6 @@ div.entry-content p {
 		padding-top: 2em;
 	}
 }
-
-#secondary {
-    display: none;
+.single-project .project-description p{
+	margin-bottom: 0px;	
 }
