--- a/src/scss/partials/_global.scss
+++ b/src/scss/partials/_global.scss
@@ -4,7 +4,6 @@ $tertiaryColor: #f5deb3;
 $purple: #551D41;
 
 body{
-	// background-image: url(http://localhost:8888/vanessa-naja/wp-content/uploads/2019/07/tree-sunset-1.jpg);
 	background-image: url(http://localhost:8888/vanessa-naja/wp-content/uploads/2019/08/tree-sunset-gradient.jpg);
 	background-position: center center;
 	background-size: cover;
@@ -46,14 +45,11 @@ body{
 	}
 	.menu-toggle	{
 		background-color: $primaryColor;
-		&:hover {
-			background-color: red;
-		}
 	}
 		#primary-menu.menu.nav-menu[aria-expanded="true"] a {
 		color: #000;
 		font-size: 1rem;	
-		background-color: rgba(255, 255, 255, 0.4);
+		background-color: rgba(255, 255, 255, 0.7);
 		padding: 0.5em 0.5em;
 		border-bottom: 2px solid rgba(0,0,0,0.3);
 		&:hover {
@@ -102,7 +98,7 @@ nav#site-navigation.main-navigation {
 		color: $primaryColor;
 	}
 	button.menu-toggle	{
-		margin-top: 2em;
+		margin-top: -0.7em;
 		padding: 0.7em 3em;
 		box-shadow: -1px 1px 1px rgba(230, 221, 219, 0.6);
 		font-size: 0.85rem;
@@ -124,7 +120,6 @@ nav#site-navigation.main-navigation {
 		flex-flow: column;
 	}
 }
-
 h1.entry-title {
 	display: none;
 }
@@ -139,6 +134,34 @@ div.entry-content p {
 		padding-top: 2em;
 	}
 }
-.single-project .project-description p{
-	margin-bottom: 0px;	
+footer {
+    .textwidget.custom-html-widget {
+		@media (min-width: 460px){
+        display: flex;
+        flex-direction: row;
+		justify-content: space-around;
+		}
+    }
+    .copyright {
+		text-align: center;
+		color: $tertiaryColor;
+	}
+	.social-icons {
+		text-align: center;
+		margin-top: 1em;
+		@media (min-width: 460px){
+			margin-top: 0;
+		}
+		img {
+			border-radius: 50%;
+			background: $tertiaryColor;
+			padding: 2px;
+			@media (min-width: 700px){
+				margin: 0 1em;
+			}
+			&:hover {
+				background: $primaryColor;
+			}
+		}
+	}
 }
