--- a/src/scss/partials/_page.scss
+++ b/src/scss/partials/_page.scss
@@ -5,10 +5,9 @@ $purple: #551D41;
 
 .page-id-24 #masthead {
     background-image: url(http://localhost:8888/vanessa-naja/wp-content/uploads/2019/08/tree-sunset-gradient.jpg);
-    // background-image: url(http://localhost:8888/vanessa-naja/wp-content/uploads/2019/08/tree-sunset-shorter-gradient.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position-x: center;
+    background-position: center;
     padding-bottom: 30em;
     @media (min-width: 1600px){
         padding-bottom: 45em;
@@ -23,12 +22,6 @@ $purple: #551D41;
     div.entry-content p {
         margin: -10em 3em 1em 3em;
     }
-    div.entry-content a {
-        color: $primaryColor;
-    }
-    div.entry-content a:hover {
-        color: $secondaryColor;
-    }
     .wp-image-180 {
         text-align: center;
         margin: 1em;
@@ -36,26 +29,5 @@ $purple: #551D41;
             float: left;
             margin: 0 1em 0 0;
         }
-    }
-}
-footer {
-    .textwidget.custom-html-widget {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-    }
-    .copyright {
-        display: inline-block;
-        margin-left: 3em;
-        color: $tertiaryColor;
-    }
-    .social-icons img {
-        margin: 0 1em;
-        padding: 2px;
-        border-radius: 50%;
-        background: $tertiaryColor;
-    }
-    img:hover {
-        background: $primaryColor;
     }
 }
