--- a/src/scss/partials/_page.scss
+++ b/src/scss/partials/_page.scss
@@ -2,9 +2,8 @@ $primaryColor: #8fecef;
 $secondaryColor: #ffff;
 $tertiaryColor: #f5deb3;
 $purple: #551D41;
-
 .page-id-24 #masthead {
-    background-image: url(http://localhost:8888/vanessa-naja/wp-content/uploads/2019/08/tree-sunset-gradient.jpg);
+    background-image: url(https://vanessanaja.com/wp-content/uploads/2019/08/tree-sunset-gradient.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
