--- a/src/scss/partials/_projects.scss
+++ b/src/scss/partials/_projects.scss
@@ -1,9 +1,8 @@
 $primaryColor: #8fecef;
 $secondaryColor: #ffff;
 $tertiaryColor: #f5deb3;
-
 .page-id-92 #masthead {
-    background-image: url(http://localhost:8888/vanessa-naja/wp-content/uploads/2019/08/tree-sunset-gradient.jpg);
+    background-image: url(https://vanessanaja.com/wp-content/uploads/2019/08/tree-sunset-gradient.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position-x: center;
@@ -25,14 +24,14 @@ $tertiaryColor: #f5deb3;
 .entry-content {
     margin-top: -11em;
     h2 {
-        font-family: Montserrat;
+        font-family: Montserrat, sans-serif;
         font-weight: 400;
         font-size: 2rem;
         display: inline-block;
         margin-bottom: 2em;
         @media (min-width: 1253px){
             margin-bottom: 0;
-        }
+            }
         }
       a {
           text-decoration: none;
